<resources>
    <string name="app_name">Track &amp; Tag</string>
    <string name="action_settings">Settings</string>
    <string name="tags">Tags</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="track_and_tag"><![CDATA[Track & Tag]]></string>
    <string name="export_data">Exporter les données</string>
    <string name="drawer_open">Ouvert</string>
    <string name="drawer_closed">Fermé</string>
</resources>
